--- a/promo/templates/modal.html
+++ b/promo/templates/modal.html
@@ -15,13 +15,13 @@
           <div>
             <input type="number" step="100" min=0 name="potongan" id="potongan" placeholder="Potongan" class="mt-1 mb-1 rounded-lg p-1 text-s">
           </div>
-          <div class="inline-flex">
-            <p class="pr-2 text-white">Kadaluarsa</p>
-            <input type="date"name="tanggal_akhir_berlaku" id="tanggal_akhir_berlaku" class="w-5" class="mt-1 mb-1 rounded-lg p-1 text-s"> 
-          </div>
-          <div> 
-            <input type="number" step="1" min=0 name="stock" id="stock" placeholder="stock" class="mt-1 mb-1 rounded-lg p-1 text-s" >
-          </div>
+            <div class="inline-flex">
+              <p class="pr-2 text-white">Kadaluarsa</p>
+              <input type="date"name="tanggal_akhir_berlaku" id="tanggal_akhir_berlaku" class="w-5" class="mt-1 mb-1 rounded-lg p-1 text-s"> 
+            </div>
+            <div> 
+              <input type="range" step="1" min=0 name="stock" id="stock" placeholder="stock" class="mt-1 mb-1 rounded-lg p-1 text-s" >
+            </div>
           <div>
             <textarea name="deskripsi" id="deskripsi" placeholder="deskripsi" class="mt-1 mb-1 rounded-lg p-1 text-s" style="resize: none;width: 100%; " ></textarea>
           </div>
