--- a/promo/templates/main_promo.html
+++ b/promo/templates/main_promo.html
@@ -2,11 +2,17 @@
 {% block content %}
 {% include 'navbar.html' %}
 <link href="https://fonts.googleapis.com/css2?family=Mouse+Memoirs&display=swap" rel="stylesheet">
-<div class="overflow-x-hidden px-4 md:px-8 pb-8 pt-24 min-h-screen bg-gray-100">
-	<div>
-		<button onclick="showModal()" class="bg-blue-500 h-12 rounded-lg text-white font-['Mouse_Memoirs'] w-20 hover:bg-blue-600 transition-colors">
-			Add Promo
+<div class="overflow-x-hidden px-4 md:px-8 pb-8 pt-24 min-h-screen" style="background: linear-gradient(153deg, #F09027 12.76%, #8CBEAA 71.77%);">
+	<div class="flex">
+		<button onclick="showModal()" class="w-12 h-12 bg-blue-500 rounded-full text-2xl justify-center text-center align-center text-white font-sans hover:bg-blue-600 transition-colors flex items-center justify-center">
+			+
 		</button>	
+		<select id="sort_by_price" onchange="filter()" class="border rounded-lg px-2 py-1">
+			<option value="potongan_asc">potongan Terendah</option>
+			<option value="potongan_desc">potongan Tertinggi</option>
+			<option value="tanggal_desc">Kadaluarsa Terlama</option>
+			<option value="tanggal_asc">Kadaluarsa Tercepat</option>
+		</select>
 	</div>
 	<div>
 		<div id="promo_cards" class="grid grid-cols-1 md:grid-cols-3 gap-6 px-20 py-10">
@@ -54,12 +60,21 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
+
+let order_by = "potongan";
+let urutan = "asc"
+
+const promoUrl = "{% url 'promo:show_json' %}";
+
 async function get_promo() {
-	return fetch("{% url 'promo:show_json' %}").then((res) => res.json());
+    const response = await fetch(`${promoUrl}?order_by=${order_by}&urutan=${urutan}`);
+	console.log(response);
+    const data = await response.json();
+    return data;
 }
 
 async function refreshPromo() {
-    const promos = await get_promo();
+    const promos = await get_promo(order_by, urutan);
     let htmlString = "";
     
     if (promos.length === 0) {
@@ -95,7 +110,7 @@ async function refreshPromo() {
 
             htmlString += `
             <a href="view_promo_admin/${promo.pk}" class="block no-underline text-black transition-transform hover:scale-105">
-                <div class="flex bg-[#FFF0F0] rounded-2xl font-['Mouse_Memoirs'] max-w-80">
+                <div class="flex bg-white rounded-2xl font-['Mouse_Memoirs'] bg-opacity-70 max-w-80">
                     <div class="flex-[3] text-center flex flex-col justify-center items-center p-4">
                         <div class="text-2xl md:text-3xl lg:text-2xl mb-2 underline">${promo.fields.nama}</div>
                         <div class="text-base md:text-lg lg:text-xl">kode: ${promo.fields.kode}</div>
@@ -112,6 +127,24 @@ async function refreshPromo() {
 }
 
 refreshPromo();
+
+function filter(){
+	const sortSelect = document.getElementById('sort_by_price').value;
+    if (sortSelect === "potongan_asc") {
+        order_by = "potongan";
+		urutan =  "asc" ;
+    } else if (sortSelect === "potongan_desc") {
+        order_by = "potongan";
+		urutan =  "desc" ;
+    } else if (sortSelect === "tanggal_asc") {
+        order_by = "tanggal_akhir_berlaku";
+		urutan =  "asc" ;
+    } else if (sortSelect === "tanggal_desc") {
+        order_by = "tanggal_akhir_berlaku";
+		urutan =  "desc" ;
+    } 
+	refreshPromo();
+}
 
 function showModal() {
 	$("#modal").css("display","");
