--- a/cart/templates/show_cart.html
+++ b/cart/templates/show_cart.html
@@ -4,7 +4,20 @@
   {% include 'navbar.html' %}
   <div class="flex justify-center items-start min-h-screen pt-20 pb-6 px-20" style="background: linear-gradient(153deg, #F09027 12.76%, #8CBEAA 71.77%);">
     <div class="bg-white bg-opacity-70 shadow-md rounded-lg p-6 w-full ml-5">
-      <h2 class="text-2xl font-semibold mb-4">My Cart</h2>
+      <div class="flex justify-between mb-3">
+        <h2 class="text-2xl font-semibold mb-4">My Cart</h2>
+        <div class="mb-6 flex flex-col md:flex-row gap-4">
+          <form method="get" class="flex-1 flex flex-col md:flex-row gap-4">
+            <!-- Sort Dropdown -->
+            <div class="flex gap-2">
+              <select name="sort" class="px-4 py-2 border rounded-lg focus:ring-2 focus:ring-cyan-500">
+                <option value="alphabet_asc">Sort by Alphabet: A-Z</option>
+                <option value="alphabet_dsc">Sort by Alphabet: Z-A</option>
+              </select>
+            </div>
+          </form>
+        </div>
+      </div>
 
       {% if cart %}
         <form id="cartForm">
@@ -32,7 +45,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="flex items-center justify-end ">
+                    <div class="flex items-center justify-end">
                       <div class="bg-[#c1eaec] text-gray-600 rounded-lg p-1 mr-2">
                         {% if item.note %}
                           <p id="noteDisplay" class="whitespace-pre-wrap">"{{ item.note|wordwrap:50 }}"</p>
@@ -229,7 +242,7 @@
       const cancelNote = document.getElementById('cancelNote')
       const saveNote = document.getElementById('saveNote')
       const noteDisplay = document.getElementById('noteDisplay')
-      
+    
       let currentItemId = null
     
       // Add note button click handler
@@ -243,7 +256,7 @@
     
           noteText.value = existingNote
           charCount.textContent = existingNote.length
-          
+    
           noteModal.classList.remove('hidden')
           noteModal.classList.add('flex')
         })
@@ -310,7 +323,7 @@
               // Close modal
               noteModal.classList.remove('flex')
               noteModal.classList.add('hidden')
-              noteDisplay.textContent = `"${noteText.value}"`;
+              noteDisplay.textContent = `"${noteText.value}"`
               noteText.value = ''
               currentItemId = null
             }
