--- a/display/templates/display.html
+++ b/display/templates/display.html
@@ -96,11 +96,7 @@
       if (filteredEntries.length === 0) {
         htmlString = `
         <div class="flex items-center justify-center mt-24 space-x-4 ml-8">
-            <img src="{% static 'image/noprod.png' %}" alt="No Products Available" class="w-60 h-80">
-            <div class="text-white text-center">
-                <p class="text-lg font-semibold">There are no products yet!</p>
-                <p class="text-sm">Please come back later.</p>
-            </div>
+            <img src="{% static 'image/barong.png' %}" alt="No Products Available" class="w-160">
         </div>
       `;
 
