add filter for promo

--- a/promo/templates/main_promo.html
+++ b/promo/templates/main_promo.html
@@ -3,15 +3,15 @@
 {% include 'navbar.html' %}
 <link href="https://fonts.googleapis.com/css2?family=Mouse+Memoirs&display=swap" rel="stylesheet">
 <div class="overflow-x-hidden px-4 md:px-8 pb-8 pt-24 min-h-screen" style="background: linear-gradient(153deg, #F09027 12.76%, #8CBEAA 71.77%);">
-	<div class="flex">
-		<button onclick="showModal()" class="w-12 h-12 bg-blue-500 rounded-full text-2xl justify-center text-center align-center text-white font-sans hover:bg-blue-600 transition-colors flex items-center justify-center">
+	<div class="flex space-x-8">
+		<button onclick="showModal()" class="w-12 h-12 bg-gradient-to-br from-[#4d2815] to-[rgb(210,106,16)] rounded-full text-2xl justify-center text-center align-center text-white font-sans hover:bg-blue-600 transition-colors flex items-center justify-center">
 			+
 		</button>	
-		<select id="sort_by_price" onchange="filter()" class="border rounded-lg px-2 py-1">
-			<option value="potongan_asc">potongan Terendah</option>
-			<option value="potongan_desc">potongan Tertinggi</option>
-			<option value="tanggal_desc">Kadaluarsa Terlama</option>
-			<option value="tanggal_asc">Kadaluarsa Tercepat</option>
+		<select id="sort_by_price" onchange="filter()" class="border bg-opacity-80 border-gray-300 rounded-lg px-4 py-2 text-gray-700 bg-white ">
+			<option value="potongan_asc" class="bg-opacity-50">Potongan Terendah</option>
+			<option value="potongan_desc" class="bg-opacity-50">Potongan Tertinggi</option>
+			<option value="tanggal_desc" class="bg-opacity-50">Kadaluarsa Terlama</option>
+			<option value="tanggal_asc" class="bg-opacity-50">Kadaluarsa Tercepat</option>
 		</select>
 	</div>
 	<div>
@@ -19,30 +19,30 @@
 	</div>
 	<script src="https://cdn.tailwindcss.com"></script>
 	<div class="fixed inset-0 flex items-center justify-center bg-opacity-50 text-center" style="display: none;" id="modal">
-		<div class=" bg-gray-400 rounded-2xl p-4" id="modal_content">
+		<div class=" bg-gradient-to-t from-[#d96629] to-[#c34603] rounded-lg p-5" id="modal_content" >
 		  <div style="padding-top: 1;font-size: large;font-weight: bold;" class="pb-2"> <!--Header-->
-			<p class="text-center">Tambah Promo</p>
+			<p class="text-center text-white">Tambah Promo</p>
 		  </div>
 		  <div> <!--Body-->
 			<form id="formpromo" action="{% url 'promo:add_promo' %}">
 			  <div>
-				<input type="text" name="nama" id="nama" placeholder="Nama" class="mt-1 mb-1 rounded-lg p-1 text-s">
+				<input type="text" name="nama" id="nama" placeholder="Nama" class="mt-1 mb-1 rounded-lg p-1 text-s" required>
 			  </div>
 			  <div>
-				<input type="text" name="kode" id="kode" placeholder="Kode" class="mt-1 mb-1 rounded-lg p-1 text-s">
+				<input type="text" name="kode" id="kode" placeholder="Kode" class="mt-1 mb-1 rounded-lg p-1 text-s" required>
 			  </div>
 			  <div>
-				<input type="number" step="100" min=0 name="potongan" id="potongan" placeholder="Potongan" class="mt-1 mb-1 rounded-lg p-1 text-s">
+				<input type="number" step="100" min=0 name="potongan" id="potongan" placeholder="Potongan" class="mt-1 mb-1 rounded-lg p-1 text-s" required>
 			  </div>
 			  <div class="inline-flex">
 				<p class="pr-2 text-white">Kadaluarsa</p>
-				<input type="date"name="tanggal_akhir_berlaku" id="tanggal_akhir_berlaku" class="w-5" class="mt-1 mb-1 rounded-lg p-1 text-s"> 
+				<input type="date"name="tanggal_akhir_berlaku" id="tanggal_akhir_berlaku" class="w-5" class="mt-1 mb-1 rounded-lg p-1 text-s" required> 
 			  </div>
 			  <div> 
-				<input type="number" step="1" min=0 name="stock" id="stock" placeholder="stock" class="mt-1 mb-1 rounded-lg p-1 text-s" >
+				<input type="number" step="1" min=0 name="stock" id="stock" placeholder="Stock" class="mt-1 mb-1 rounded-lg p-1 text-s" required>
 			  </div>
 			  <div>
-				<textarea name="deskripsi" id="deskripsi" placeholder="deskripsi" class="mt-1 mb-1 rounded-lg p-1 text-s" style="resize: none;width: 100%; " ></textarea>
+				<textarea name="deskripsi" id="deskripsi" placeholder="deskripsi" class="mt-1 mb-1 rounded-lg p-1 text-s" style="resize: none;width: 100%; " required ></textarea>
 			  </div>
 			</form>
 		  </div>
