--- a/promo/templates/main_promo.html
+++ b/promo/templates/main_promo.html
@@ -4,8 +4,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Mouse+Memoirs&display=swap" rel="stylesheet">
 <div class="overflow-x-hidden px-4 md:px-8 pb-8 pt-24 min-h-screen" style="background: linear-gradient(153deg, #F09027 12.76%, #8CBEAA 71.77%);">
 	<div class="flex space-x-8">
-		<button onclick="showModal()" class="w-12 h-12 bg-gradient-to-br from-[#4d2815] to-[rgb(210,106,16)] rounded-full text-2xl justify-center text-center align-center text-white font-sans hover:bg-blue-600 transition-colors flex items-center justify-center">
-			+
+		<button onclick="showModal()" class="w-12 h-12 bg-[rgb(210,107,16)] rounded-lg text-lg text-center align-center hover:bg-[rgb(181,105,39)] text-white font-bold">
+			Add
 		</button>	
 		<select id="sort_by_price" onchange="filter()" class="border bg-opacity-80 border-gray-300 rounded-lg px-4 py-2 text-gray-700 bg-white ">
 			<option value="potongan_asc" class="bg-opacity-50">Potongan Terendah</option>
@@ -19,23 +19,23 @@
 	</div>
 	<script src="https://cdn.tailwindcss.com"></script>
 	<div class="fixed inset-0 flex items-center justify-center bg-opacity-50 text-center" style="display: none;" id="modal">
-		<div class=" bg-gradient-to-t from-[#d96629] to-[#c34603] rounded-lg p-5" id="modal_content" >
+		<div class=" bg-gradient-to-b from-[#8CBEAA] to-[#73D28C] rounded-lg p-5 border-[#4c3013] border-4" id="modal_content" >
 		  <div style="padding-top: 1;font-size: large;font-weight: bold;" class="pb-2"> <!--Header-->
-			<p class="text-center text-white">Tambah Promo</p>
+			<p class="text-center text-[#4c3013]">Tambah Promo</p>
 		  </div>
 		  <div> <!--Body-->
 			<form id="formpromo" action="{% url 'promo:add_promo' %}">
 			  <div>
-				<input type="text" name="nama" id="nama" placeholder="Nama" class="mt-1 mb-1 rounded-lg p-1 text-s" required>
+				<input type="text" name="nama" id="nama" placeholder="Nama" maxlength="20" minlength="4" class="mt-1 mb-1 rounded-lg p-1 text-s" required>
 			  </div>
 			  <div>
-				<input type="text" name="kode" id="kode" placeholder="Kode" class="mt-1 mb-1 rounded-lg p-1 text-s" required>
+				<input type="text" name="kode" id="kode" placeholder="Kode" maxlength="15" minlength="4"  class="mt-1 mb-1 rounded-lg p-1 text-s" required>
 			  </div>
 			  <div>
-				<input type="number" step="100" min=0 name="potongan" id="potongan" placeholder="Potongan" class="mt-1 mb-1 rounded-lg p-1 text-s" required>
+				<input type="number" step="100" maxlength="8" min=0 name="potongan" id="potongan" placeholder="Rp Potongan" class="mt-1 mb-1 rounded-lg p-1 text-s" oninput="checkLength(this)" required>
 			  </div>
 			  <div class="inline-flex">
-				<p class="pr-2 text-white">Kadaluarsa</p>
+				<p class="pr-2 text-[#4c3013] font-bold">Kadaluarsa</p>
 				<input type="date"name="tanggal_akhir_berlaku" id="tanggal_akhir_berlaku" class="w-5" class="mt-1 mb-1 rounded-lg p-1 text-s" required> 
 			  </div>
 			  <div> 
@@ -47,22 +47,19 @@
 			</form>
 		  </div>
 		  <div class="flex space-x-2"> <!--footer-->
-			<button type="button" id="cancel" class="bg-red-400 text-xs p-1 rounded-lg w-full" onclick="hideModal()">Cancel</button>
-			<button type="submit" id="submitItem" form="formpromo" class="bg-blue-500 text-xs p-1 rounded-lg w-full">Save</button>
+			<button type="button" id="cancel" class="bg-[#8a1616] text-xs p-1 rounded-lg w-full text-white" onclick="hideModal()">Cancel</button>
+			<button type="submit" id="submitItem" form="formpromo" class="bg-[#4c3013] text-white text-xs p-1 rounded-lg w-full">Save</button>
 		</div>
 		</div>  
 	</div>	
 </div>
-
-  
-
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
 
 let order_by = "potongan";
-let urutan = "asc"
+let urutan = "asc";
 
 const promoUrl = "{% url 'promo:show_json' %}";
 
@@ -78,7 +75,7 @@ async function refreshPromo() {
     let htmlString = "";
     
     if (promos.length === 0) {
-        $("#promo_cards").html('<div class="col-span-full text-center">Belum ada promo</div>');
+        $("#promo_cards").html('<p class="text-lg font-semibold text-white col-span-full text-center">Belum ada promo :(</p>');
     } else {
         promos.forEach((promo) => {
             let potonganValue = promo.fields.potongan / 1000;
@@ -106,6 +103,10 @@ async function refreshPromo() {
                        potonganValue.toFixed(0) + sufiks : 
                        potonganValue.toFixed(1) + sufiks;
 			}
+			if (promo.fields.potongan < 1000) {
+				potongan = promo.fields.potongan;
+				potongan = parseInt(potongan);
+			}
 			
 
             htmlString += `
@@ -116,8 +117,8 @@ async function refreshPromo() {
                         <div class="text-base md:text-lg lg:text-xl">kode: ${promo.fields.kode}</div>
                         <div class="text-base md:text-lg lg:text-xl">Valid hingga ${promo.fields.tanggal_akhir_berlaku}</div>
                     </div>
-                    <div class="flex-[2] ${bgColor} rounded-r-2xl flex items-center justify-center text-3xl md:text-4xl lg:text-5xl ${textColor}">
-                        ${potongan}
+                    <div class="flex-[2] ${bgColor} rounded-r-2xl flex items-center justify-center text-3xl md:text-3xl lg:text-3xl ${textColor}">
+                        Rp${potongan}
                     </div>
                 </div>
             </a>`;
@@ -149,13 +150,18 @@ function filter(){
 function showModal() {
 	$("#modal").css("display","");
 	$("a").css("pointer-event","none")
-	$("html").css("overflow","hidden")
 }
 
 function hideModal() {
 	$("#modal").css("display","none")
 	$("a").css("pointer-event","")
 	$("html").css("overflow","")
+}
+
+function checkLength(input) {
+    if (input.value.length > 8) {
+        input.value = input.value.slice(0, 8); 
+    }
 }
 
 //https://gawibowo.com/submit-form-dengan-ajax-menggunakan-jquery.htm
